--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "less": "^4.1.3",
     "vitepress": "^1.0.0-alpha.12",
     "vue": "^3.2.37"
   }
