--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "less": "^4.1.3",
     "vitepress": "^1.0.0-alpha.12",
     "vue": "^3.2.37"
+  },
+  "dependencies": {
+    "sass": "^1.56.1"
   }
 }
