--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zuo-experience",
+  "name": "food",
   "version": "0.1.0",
-  "description": "my experience record",
+  "description": "dev-zuo food daily",
   "main": "index.js",
   "scripts": {
     "dev": "vitepress dev docs",
